<?xml version='1.0' encoding='utf-8'?>
<package format="3">
    <name>unitree_legged_control</name>
  <version>0.0.0</version>
  <description>The unitree_legged_control package</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>unitree_legged_msgs</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>unitree_legged_msgs</exec_depend>
  <export>
        
        <controller_interface plugin="${prefix}/unitree_controller_plugins.xml" />
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
