<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>youbot_description</name>
  <version>0.1.0</version>
  <description>Robot descriptions in form of URDF files and meshes</description>
  <author email="frederik.hegger@h-brs.de">Frederik Heger</author>
  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
  <maintainer email="blumenthal@locomotec.com">Sebastian Blumenthal</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
