<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>arena_evaluation</name>
  <version>1.0.0</version>
  <description>Part of the arena-benchmark system. 
  This package is for data recording, evaluation und plotting of performance metrics for arena-rosnav simulations.</description>
  <maintainer email="d.pichel@campus.tu-berlin.de">Duc Pichel</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export><build_type>ament_cmake</build_type>
  </export></package>